  change. [ 1883809 - ezust ]

- [About jEdit] dialog is refined. It now performs smoother animation
  and fade out effect. (xlinuks)

- [Macros] Copying/cutting/moving/duplicating multiple vs.  single lines
    [ 1849180 - encorejane ]
    renamed Move_Line_(Down|Up) to Move_Lines_$1,
    renamed (Copy|Cut)_Selection_Or_Line to $1_Lines
    new macros: Duplicate_Lines_(Above|Below)

}}}
{{{ Editing

- SF Bug #1853797: perl syntax highlighting: broken '\' after var interpolation
  The rule for matching literals was wrongly highlighting perl variables.
  Fix is to use the same rule used in the main rule set to match those
  variables. (Marcelo Vanzin)

- Handling of /regexp/ in ruby mode is refined. (Kazutoshi Satoda)

  NOTE: If a regexp begins with a whitespace (including a newline), the
  beginning "/" is wrongly treated as a division operator. But such regexp
  is rare enough and one can use %r notations or write like "/\ ..." to
  force jEdit to treat it as a regexp.

- Added macro Files/Duplicate_Buffer.bsh
  It copies the current buffer in a new untitled buffer
  (Request #1849184) (Matthieu Casanova)

- Added macro Clipboard/Paste_Indent.bsh that paste and indent the clipboard
  (Request #1827083) (Matthieu Casanova)

- Improved auto indentation in Ruby edit mode. It now unindents things
  like else, end, require etc on the fly.
  (SF.net patch #1726646 - Jim Morris and Kazutoshi Satoda)

- Improved PHP edit mode (Daniel Hahler):
  - handle "${foo}" (SF Bug 1818619) and other valid expressions in literal,
    backticks and heredoc blocks
  - fix comment props for HTML in TAGS ruleset (C-e C-c/range-comment uses
    proper comment syntax there now)
  - fix delegating back from various rulesets (OBJECT_PHP, ...) to PHP
    ruleset; includes fixed handling of comments
  - fix matching of PHP vars (using SEQ_REGEXP instead of MATCH_FOLLOWING),
    so that it does not match "$foo\" completely; now uses the exact regexp
    for valid variable names